# OOP-in-C

./: .gitignore  CMakeLists.txt  Makefile  build.sh  main.c
example/: main_example.c
github/: README.md
include/: interface.h  macro.h  safe_array.h  safe_iterator.h  safe_list.h  safe_string.h  types.h
include/error/: assert.h
include/memory/: allocate.h  garbage_collector.h  liberate.h
include/oop/: array.h  interface.h  macros.h  map.h  string.h
lib/array/: array.c  from_file.c
lib/class/: create.c  free_gc.c
lib/iterator/: iterator.c
lib/list/: list.c  pop.c  push.c
lib/string/: from_file.c  string.c
lib/utils/: log.c
src/: array.c  garbage_collector.c  map.c  string.c
tests/: array.c  map.c  memory.c  tests.h
